--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -12,15 +12,26 @@
 	<style>
 
 		nav>a{
-			font-family: "Inter", sans-serif;
+			font-family: 'Heebo', sans-serif;
+		}
+
+		.scrollbar > a{
+			font-family: 'Josefin Slab', serif;
+			font-size: 1.6vw;
+			line-height: 1;
+			padding: 1.1vh 1.1vh 0.5vh 1.1vh;
 		}
 
 		h1,h2,h3 {
-			 font-family: "Josefin Slab", serif;
+			font-family: 'Josefin Slab', serif;
+		}
+		
+		.title{
+			padding: 2% 1.5% 1.5% 1%;
 		}
 
 		body {
-			font-family: "Inter", sans-serif;
+			font-family: 'Heebo', sans-serif;
 		}
 
 	</style>
@@ -32,8 +43,8 @@
 	<nav>
 		<img src="img/menu.png" alt="menu">
 		<a href="index_en.html" ><img src="img/fire.png">Home</a>
-		<a href="featured_article_en.html"><img src="img/fire.png">AO3!! </a>
-		<a href="featured_article_cn.html"><img src="img/fire.png">中文版</a>
+		<a href="featured_article_en.html" class="current-page"><img src="img/fire.png">AO3!! </a>
+		<a href="featured_article_cn.html" style="	font-family: TaipeiSansTCBeta, sans-serif;"><img src="img/fire.png">中文版</a>
 	</nav>
 
 	<nav>
@@ -162,7 +173,7 @@
 </div>
 
 	<div class="title" id="p3_sharpen">
-		<h2>
+		<h2 style="	line-height: 1.5;">
 			Sharpen your English skill
 		</h2>
 	</div>
