--- a/personal/index_en.html
+++ b/personal/index_en.html
@@ -15,11 +15,11 @@
 		}
 
 		h1,h2,h3 {
-			font-family:IBM Plex Serif, serif;
+			font-family: 'Josefin Slab', serif;
 		}
 
 		body {
-			font-family: Inter, sans-serif;
+			font-family: 'Inter', sans-serif;
 		}
 
 		article{
@@ -44,9 +44,9 @@
 <body>
 	<nav>
 		<img src="img/menu.png" alt="menu">
-		<a href="index_en.html" ><img src="img/fire.png">Home</a>
+		<a href="index_en.html" class="current-page"><img src="img/fire.png">Home</a>
 		<a href="featured_article_en.html"><img src="img/fire.png">AO3!! </a>
-		<a href="index_cn.html"><img src="img/fire.png">中文版</a>
+		<a href="index_cn.html" style="	font-family: TaipeiSansTCBeta, sans-serif;"><img src="img/fire.png">中文版</a>
 	</nav>
 	<div class="article">
 	<article>
