--- a/personal/index_en.html
+++ b/personal/index_en.html
@@ -44,7 +44,7 @@
 <body>
 	<nav>
 		<img src="img/menu.png" alt="menu">
-		<a href="index_en.html" class="current-page"><img src="img/fire.png">Home</a>
+		<a href="index_en.html" class="current-page" style="margin-left: -4%;"><img src="img/fire.png">Home</a>
 		<a href="featured_article_en.html"><img src="img/fire.png">AO3!! </a>
 		<a href="index_cn.html" style="	font-family: TaipeiSansTCBeta, sans-serif;"><img src="img/fire.png">中文版</a>
 	</nav>
