複製貼上 中文主題文章

--- a/personal/featured_article_cn.html
+++ b/personal/featured_article_cn.html
@@ -119,16 +119,16 @@
 			AO3全名是AO3作品庫（Archive of Our Own），這是一個放有各種作品的網站，由大量的創作和優秀的介面組成。現在已經收錄超過七百萬個作品，包括文字創作、繪畫作品、影音創作。
 		</p>
 		<p>
-			AO3 was first created to provide a place where fans could put their fanworks. People that are fans of a particular book, movie, group, or videogame form their own circles known as a fandom. The fictions and stories created by these fans are called fanfics (aka fics), the arts are fanart, and the audiobooks based on a fanfic are podfics. Most of the works on AO3 are fanworks, but there are also original works up there.
+			AO3創立初衷是希望提供人們一個能夠放存放創作的地方。喜歡不同東西的粉絲會組成一個個同人圈，而這些粉絲為他們喜歡的角色或故事產出各種圖、文和進行其他相關創作的的行為稱為二次創作，簡稱二創，這些作品統稱為「同人」，例如：同人小說（同人文）、同人圖等。AO3大部分作品都是二創同人作品，但也不乏原創作品。
 		</p>
 		<p>
 			<h3>AO3有什麼特別？</h3>
 			
-			It is a non-profit website that does not have any annoying ads popping out all the time. In addition, the idea of AO3 is to share with others, therefore almost all the works could be downloaded freely in multiple formats. It does not require users to create an account to have access to most of its content and functions. Anyone could write a comment, download a fanfic, and leave a kudo.
+			AO3是一個非營利網站，沒有那些煩人又礙眼的廣告。除此之外，因為創站理念是要讓作品傳播，幾乎所有站上的作品都能免費下載，還提供多種格式供選擇。AO3並沒有要求使用者一定要註冊，讀者就算沒有登入也能閱覽AO3上大部分的內容與使用它的各種功能，像是留言、下載小說、按讚（kudos）。
 
 		</p>
 		<p>
-			The works on AO3 not only cover more than 40,000 fandoms, but also have characters and stories featuring all kinds of sexuality, gender identity, and relationships. In fact, M/M (male/male) are the most popular type of pairing and relationship on AO3.    
+			AO3上的作品橫跨四萬個同人圈，題材五花八門，多元性別、性傾向、性別認同、關係型態都有一席之地，而且AO3裡面最大宗的組合不是一男一女的異性戀關係，而是男男配對（M/M：male/male）。  
 		</p>
 
 		</p>
@@ -150,7 +150,11 @@
 	<article><!-- 之二 -->
 		<p>
 			<h3>那些實用到爆的功能</h3>
-			If you already know the title of a work or the name of an author you are looking for, the fastest way to find it is to feed the information to google and add the keyword “ao3”.  However, when searching for new works in AO3, I highly recommend using the built-in search system of AO3. It has an amazing tagging system that comes with a powerful sort and filter function. There are tags for everything: name of the fandom a work belongs to, the rating of the work, warnings, characters that appear in it, the relationship of those characters, the worldview of the work, and anything the artist wants to include. I recommend checking “warnings” and excluding anything you do not like, this could decrease the chance of encountering works that contain contents you wish to avoid. Altering the setting of “fandoms”, “categories”, and “additional tags” will also help narrow down your search. The “M” and “F” in “categories” represent male and female respectively. Categories let users choose what kinds of relationships they wish to look for in a work.
+			如果已知作品或作者名稱，建議直接在google輸入關鍵字，並加上「ao3」來進行尋找。不過如果是要找新作品，非常推薦使用AO3內建的標籤系統和其強大的搜索功能。AO3的標籤包山包海，從作品屬於哪個同人圈、雷點（敏感內容預警）（warnings）、作品分級、世界觀，到出場角色有哪些、角色之間的關係、以及任何創作者想加入標籤的內容。
+		</p>
+
+		<p>
+			建議在找作品時檢查一下雷點（warnings）：在「Exclude（排除）」底下的「warnings（雷點）」選擇不想看到的內容並按╳，這樣可以降低之後被作品內容雷到的機率。接著選填「fandoms（同人圈）」、「categories（分類）」和「additional tags（其他標籤）」這幾欄，有助於找到合心意的作品。其中「categories（分類）」裡面的M跟F分別代表男性（male）與女性（female），這一欄能幫你找到鍾意的主要愛情線類型。
 		</p>
 
 	<div class="side-by-side">
@@ -175,14 +179,14 @@
 		
 		<p>
 			<h3>其他好用小技巧</h3>
-			Another useful function in AO3 is the two modes of displaying a work. The default mode is to show a work chapter by chapter, but the “Entire work” mode is more convenient when users wish to search through the whole text for a keyword or quickly skim through the content.
+			多章節的作品預設呈現模式是一次一章節（Chapter by Chapter），不過如果想要搜索全文或是快速瀏覽作品內容，可以選擇「全文（Entire Work）」模式。
 		</p>
 		<figure>
 			<img src="img/start_entire_cn.jpg" alt="tip: entire work"/>
 			<figcaption>全文顯示鍵</figcaption>
 		</figure>
 		<p>
-			AO3 supports text-based content the best, you could download any fanfic just by clicking. The work could be downloaded in many formats. For example: PDF, EPUB, AZW3, and HTML.  
+			AO3 對文字內容支援度最高，任何小說都可以一鍵下載，可以選擇五六種格式，包含：PDF、 EPUB、AZW3,和HTML。  
 		</p>
 		<figure>
 			<img src="img/start_download_cn.jpg" alt="tip: download"/>
@@ -203,14 +207,14 @@
 <div class="article">
 	<article><!-- 之三 -->
 		<p>
-			If you are looking for a way to sharpen your English skills, AO3 also has many resources. Reading the fanfics posted there, you could pick up all kinds of slang on your way and learn new words. Although there are many brilliant works on AO3, there are also works that contain a lot of typos and grammar errors, since there is no editor to edit the text before it gets published, most authors have to do the editing by themselves. Betas are like editors, they help the author revise his or her work. A fic that has a beta normally has much less spelling and grammar error.
+			AO3上的資源也可以用於增進英文能力，與學校課本相較之下，AO3的英文二創小說有較多俚語跟非正式語法，同時也有許多新單字可以學。雖然AO3有許多優良作品，但整體而言就其創作成品水準參差不齊，畢竟沒有編輯把關，作者常常要身兼編輯與校對，所以不少小說內含滿滿的拼字和文法錯誤。Beta有點類似校對或編輯，會協助作者修訂作品，所以一篇有Beta的小說通常拼字與文法錯誤會少很多。
 		</p>
 		<figure>
 			<img src="img/sharpen_beta.jpg" alt="betaed work"/>
 			<figcaption>有Beta的作品</figcaption>
 		</figure>
 		<p>
-			Aside from fictions, there are also numerous podfics (the audiobook version of a fanfic) that are suitable for practicing English listening on AO3. The advantage of podfics is that they are based on fanfics, which means you could find the full text version of a work. This makes it easy to look up and check words you did not understand when listening to the podfic. Also, the podfics and their text version are both free to download/stream. In addition, it provides you the chance to get used to different speeds of speech and accent. Because popular works have a higher chance of getting a podfic version, they mostly have a higher quality with less misspelling and sloppy grammar.
+			除了小說之外，AO3上也有不少英文有聲書，使用的標籤通常是「Podfic」，代表是以同人文為創作基底的有聲書。因為這些有聲書都有逐字稿（原本的純文字小說）所以很適合拿練英文聽力。讓聽不懂有聲書的內容時，有逐字稿就方便查單字。另外，這些有聲書和同人文都可以免費下載／線上串流，對荷包很友善。除此之外，世界各地的人都可能在AO3分享自己的有聲書作品，所以用有聲書練英聽可以讓你習慣不同的語速跟口音。能被製成有聲書的二創小說通常人氣都不錯，平均而言他們行文時文法跟拼字錯誤也較少。
 		</p>
 		<figure>
 			<img src="img/sharpen_inspired_cn.jpg" alt="The work that inspired the podfic"/>
@@ -232,15 +236,18 @@
 	<article><!-- 之四 -->
 		<p>
 			<h3>[Podfic] ain't really quaint</h3>
-			This is a light and humorous story from the Captain America fandom, featuring Steve Rogers (Captain America) and James “Bucky” Barnes (the winter soldier). The podficer quietnight not only has excellent taste when choosing stories to podfic, they also make the voice of each character distinct, which makes it easy to understand dialogs. quietnight is a talented artist who produces fantastic artworks as well as podfics, [Podfic] ain't really quaint features a few of their splendid artwork. 
+			這是一個輕鬆爆笑的故事，屬於漫威《美國隊長》的同人創作，主角是美國隊長史蒂芬·羅傑斯（Steve Rogers）和酷寒戰士巴奇·巴恩斯（the winter soldier James “Bucky” Barnes）。說書人Quietnight眼光很好，被他挑中錄製成有聲書的故事都是優質作品，而且Quietnight在錄有聲書時會讓不同角色有不同聲線，角色在對話時很容易分辨誰是誰。
+		</p>
+		<p>
+			Quietnight同時是優秀的畫家，《ain't really quaint》的有聲書版本就有好幾張超爆笑的出色插圖，推薦去看。
 		</p>
 		<p>
 			<h3>Opalsong</h3>
-			Opalsong is a very productive podficer that has more than 1,000 works that scatter across more than 200 fandoms under their belt. They give different characters different voices, too. Apart from speaking clearly, the recording and editing are both neat and clean. Listening to their work is a great experience.
+			Opalsong 是位高產的說書人，目前累計有超過一千本有聲書，橫跨兩百多個同人圈。他同樣會給不同角色不同聲音，而且咬字清晰，又有優質的錄音與後製，每次聽他作品都是快的經驗。
 		</p>
 		<p>
 			<h3>Lockedinjohnlock (Podfixx)</h3>
-			Lockedinjohnlock (Podfixx) has two pseuds on AO3, Lockedinjohnlock and Podfixx, both has more than one hundred podfic works. Their Podfic are also well-made. In addition, Podfixx has an English accent. (Many of their works have the tag “English accent”, too!) Their accent is distinct from the English accent many Taiwan students are used to but not too different that it is hard to understand. It is interesting to experience the different tone and pronunciation.
+			Lockedinjohnlock (Podfixx) 在AO3有兩個化名，分別為Lockedinjohnlock和Podfixx，名下各有超過一百本有聲書。他的有聲書品質也很好，而且他口音為台灣學生較少接觸的英國腔（他很多作品的標籤區都直接寫「English accent」！）。雖然我們不常聽到英國口音，不過Lockedinjohnlock (Podfixx)的口音不會太難聽懂，能體驗不同的聲調跟發音其實挺有趣的。
 		</p>
 		
 	</article>
