--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -100,19 +100,18 @@
 			Archive of Our Own (AO3) is a website where people share their works with others. It is basically a repository hosting more than 7 million works that comes with a well-designed filter/search system. There are different types of work on AO3, including stories, drawings, and audiobooks.
 		</p>
 		<p>
-			AO3 was first created to provide a place where fans could put their fanworks. People that are fans of a particular book, movie, group, or videogame form their own circles known as a fandom. The fictions and stories created by these fans are called fanfics (aka fics), the arts are fanart, and the audiobooks based on a fanfic are podfics. Most of the works on AO3 are fanworks, but there are also original works up there.
+			AO3 was first created to provide a place where fans could put their fanworks. People that are fans of a particular book, movie, group, or videogame form their own circle known as a fandom. The fictions and stories created by these fans are called fanfics (aka fics), the arts are fanart, and the audiobooks based on a fanfic are called podfics. Most of the works on AO3 are fanworks, but there are also original works up there.
 		</p>
 		<p>
 			<h3>What is special abut it</h3>
 			
-			It is a non-profit website that does not have any annoying ads popping out all the time. In addition, the idea of AO3 is to share with others, therefore almost all the works could be downloaded freely in multiple formats. It does not require users to create an account to have access to most of its content and functions. Anyone could write a comment, download a fanfic, and leave a kudo.
+			Archive of Our Own is a non-profit website that does not have any annoying ads popping out all the time. In addition, the idea of AO3 is to share with others, therefore, almost all the works hosted on AO3 could be downloaded freely in multiple formats. Archive of Our Own does not require users to create an account to have access to most of its content and functions. Anyone could write a comment, download a fanfic, and leave a kudo.
 
 		</p>
 		<p>
-			The works on AO3 not only cover more than 40,000 fandoms, but also have characters and stories featuring all kinds of sexuality, gender identity, and relationships. In fact, M/M (male/male) are the most popular type of pairing and relationship on AO3.    
+			The works on AO3 not only cover more than 40,000 fandoms, but also have characters and stories featuring all kinds of sexuality, gender identity, and relationships. In fact, among the numerous works on AO3, M/M (male/male) are the most popular type of pairing and relationship.     
 		</p>
 
-		</p>
 	</article>
 </div>
 
@@ -130,7 +129,10 @@
 <div class="article">
 	<article><!-- 之二 -->
 		<p>
-			If you already know the title of a work or the name of an author you are looking for, the fastest way to find it is to feed the information to google and add the keyword “ao3”.  However, when searching for new works in AO3, I highly recommend using the built-in search system of AO3. It has an amazing tagging system that comes with a powerful sort and filter function. There are tags for everything: name of the fandom a work belongs to, the rating of the work, warnings, characters that appear in it, the relationship of those characters, the worldview of the work, and anything the artist wants to include. I recommend checking “warnings” and excluding anything you do not like, this could decrease the chance of encountering works that contain contents you wish to avoid. Altering the setting of “fandoms”, “categories”, and “additional tags” will also help narrow down your search. The “M” and “F” in “categories” represent male and female respectively. Categories let users choose what kinds of relationships they wish to look for in a work.
+			If you already know the title of a work or the name of an author you are looking for, the fastest way to find it is to feed the information to google and add the keyword “ao3”. However, when searching for new works in AO3, I highly recommend using the built-in search system. AO3 has an amazing tagging system that comes with a powerful sort and filter function. There are tags for everything: name of the fandom a work belongs to, the rating of the work, warnings, characters that appear in it, the relationship of those characters, the worldview of the work, and anything the artist wants to include. 
+		</p>
+		<p>
+			I recommend checking “warnings” and excluding anything you do not like, this could decrease the chance of encountering works that contain contents you wish to avoid. Altering the setting of “fandoms”, “categories”, and “additional tags” will also help narrow down your search. The “M” and “F” in “categories” represent male and female respectively. Categories let users choose what kinds of romantic and/or sexual relationships they wish to look for in a work.
 		</p>
 
 	<div class="side-by-side">
@@ -181,14 +183,14 @@
 <div class="article">
 	<article><!-- 之三 -->
 		<p>
-			If you are looking for a way to sharpen your English skills, AO3 also has many resources. Reading the fanfics posted there, you could pick up all kinds of slang on your way and learn new words. Although there are many brilliant works on AO3, there are also works that contain a lot of typos and grammar errors, since there is no editor to edit the text before it gets published, most authors have to do the editing by themselves. Betas are like editors, they help the author revise his or her work. A fic that has a beta normally has much less spelling and grammar error.
+			If you are looking for a way to sharpen your English skills, AO3 also has many resources. Reading the fanfics posted there, you could pick up all kinds of slangs on your way and learn new words. Although there are many brilliant works on AO3, there are also works that contain a lot of typos and grammar errors. Since there is no editor to edit the text before a work gets published, most authors have to do the editing by themselves. Betas are like editors, they help the author revise his or her work. A fic that has a beta or is beta-ed normally has much less spelling and grammar errors.
 		</p>
 		<figure>
 			<img src="img/sharpen_beta.jpg" alt="betaed work"/>
 			<figcaption>Work's with a beta</figcaption>
 		</figure>
 		<p>
-			Aside from fictions, there are also numerous podfics (the audiobook version of a fanfic) that are suitable for practicing English listening on AO3. The advantage of podfics is that they are based on fanfics, which means you could find the full text version of a work. This makes it easy to look up and check words you did not understand when listening to the podfic. Also, the podfics and their text version are both free to download/stream. In addition, it provides you the chance to get used to different speeds of speech and accent. Because popular works have a higher chance of getting a podfic version, they mostly have a higher quality with less misspelling and sloppy grammar.
+			Aside from fictions, there are also numerous podfics (the audiobook version of a fanfic) that are suitable for practicing English listening on AO3. The advantage of podfics is that they are based on fanfics, which means you could find the full text version of the work. This makes it easy to look up and check words you did not understand when listening to the podfic. Also, the podfics and their text versions are all free to download/stream. In addition, listening to a podfic provides you the chance to get used to different speeds of speech and accents. Because popular works have a higher chance of getting a podfic version, if a fanfic got a podfic, it mostly indicates higher quality with less misspelling and sloppy grammar.
 		</p>
 		<figure>
 			<img src="img/sharpen_inspired_en.jpg" alt="The work that inspired the podfic"/>
@@ -209,15 +211,15 @@
 	<article><!-- 之四 -->
 		<p>
 			<h3>[Podfic] ain't really quaint</h3>
-			This is a light and humorous story from the Captain America fandom, featuring Steve Rogers (Captain America) and James “Bucky” Barnes (the winter soldier). The podficer quietnight not only has excellent taste when choosing stories to podfic, they also make the voice of each character distinct, which makes it easy to understand dialogs. quietnight is a talented artist who produces fantastic artworks as well as podfics, [Podfic] ain't really quaint features a few of their splendid artwork. 
+			This is a light and humorous story from the Captain America fandom, featuring Steve Rogers (Captain America) and James “Bucky” Barnes (the winter soldier). The podficer Quietnight not only has excellent taste when choosing stories to podfic, they also make the voice of each character distinct, which makes it easy to understand dialogs. Quietnight is a talented artist who produces fantastic artworks as well as podfics.
 		</p>
 		<p>
 			<h3>Opalsong</h3>
-			Opalsong is a very productive podficer that has more than 1,000 works that scatter across more than 200 fandoms under their belt. They give different characters different voices, too. Apart from speaking clearly, the recording and editing are both neat and clean. Listening to their work is a great experience.
+			Opalsong is a very productive podficer that has more than 1,000 podfics scattered across more than 200 fandoms under their belt. They give different characters different voices, too. Apart from speaking clearly, the recording and editing are both neat and clean. Listening to their work is a great experience.
 		</p>
 		<p>
 			<h3>Lockedinjohnlock (Podfixx)</h3>
-			Lockedinjohnlock (Podfixx) has two pseuds on AO3, Lockedinjohnlock and Podfixx, both has more than one hundred podfic works. Their Podfic are also well-made. In addition, Podfixx has an English accent. (Many of their works have the tag “English accent”, too!) Their accent is distinct from the English accent many Taiwan students are used to but not too different that it is hard to understand. It is interesting to experience the different tone and pronunciation.
+			Lockedinjohnlock (Podfixx) has two pseuds on AO3, Lockedinjohnlock and Podfixx, both with more than one hundred podfic works. Their podfics are also well-made. In addition, Lockedinjohnlock has an English accent. (Many of their works have the tag “English accent”, too!) Their accent is distinct from the American accent many Taiwan students are used to. But it is not so different from an American English accent that it is hard to understand. To me, it is interesting to experience the different tone and pronunciation when listening to one of Lockedinjohnlock’s podfics.
 		</p>
 		
 	</article>
