--- a/personal/featured_article_cn.html
+++ b/personal/featured_article_cn.html
@@ -116,19 +116,17 @@
 	<article><!-- 之一 -->
 		<p>
 			<h3>AO3是什麼？能吃嗎？</h3>
-			AO3全名是AO3作品庫（Archive of Our Own），這是一個放有各種作品的網站，由大量的創作和優秀的介面組成。現在已經收錄超過七百萬個作品，包括文字創作、繪畫作品、影音創作。
+			AO3全名是AO3作品庫（Archive of Our Own），是一個放有各種作品的網站。AO3有優秀的使用者介面且彙集了大量的創作，現在已經收錄超過七百萬件作品，包括文字創作、繪畫作品、影音創作。
 		</p>
 		<p>
-			AO3創立初衷是希望提供人們一個能夠放存放創作的地方。喜歡不同東西的粉絲會組成一個個同人圈，而這些粉絲為他們喜歡的角色或故事產出各種圖、文和進行其他相關創作的的行為稱為二次創作，簡稱二創，這些作品統稱為「同人」，例如：同人小說（同人文）、同人圖等。AO3大部分作品都是二創同人作品，但也不乏原創作品。
+			AO3創立初衷是希望提供人們一個能夠放存放各類創作的地方。喜歡不同東西的粉絲會組成一個個同人圈，而這些粉絲為他們喜歡的角色或故事產出各種圖、文和進行其他相關創作的行為稱為二次創作，簡稱二創，這些作品統稱為「同人」，例如：同人小說（同人文）、同人圖等。AO3大部分作品都是二創同人作品，但也不乏原創作品。
 		</p>
 		<p>
 			<h3>AO3有什麼特別？</h3>
-			
 			AO3是一個非營利網站，沒有那些煩人又礙眼的廣告。除此之外，因為創站理念是要讓作品傳播，幾乎所有站上的作品都能免費下載，還提供多種格式供選擇。AO3並沒有要求使用者一定要註冊，讀者就算沒有登入也能閱覽AO3上大部分的內容與使用它的各種功能，像是留言、下載小說、按讚（kudos）。
-
 		</p>
 		<p>
-			AO3上的作品橫跨四萬個同人圈，題材五花八門，多元性別、性傾向、性別認同、關係型態都有一席之地，而且AO3裡面最大宗的組合不是一男一女的異性戀關係，而是男男配對（M/M：male/male）。  
+			AAO3上的作品橫跨四萬多個同人圈，題材五花八門，多元性別、性傾向、性別認同、關係型態都有一席之地，而且其中最大宗的組合不是一男一女的異性戀關係，而是男男配對（M/M：male/male）。
 		</p>
 
 		</p>
@@ -150,11 +148,11 @@
 	<article><!-- 之二 -->
 		<p>
 			<h3>那些實用到爆的功能</h3>
-			如果已知作品或作者名稱，建議直接在google輸入關鍵字，並加上「ao3」來進行尋找。不過如果是要找新作品，非常推薦使用AO3內建的標籤系統和其強大的搜索功能。AO3的標籤包山包海，從作品屬於哪個同人圈、雷點（敏感內容預警）（warnings）、作品分級、世界觀，到出場角色有哪些、角色之間的關係、以及任何創作者想加入標籤的內容。
+			如果已知作品或作者名稱，建議直接在google輸入關鍵字，並加上「ao3」來進行尋找。不過如果是要找新作品，非常推薦使用AO3內建的標籤系統和其強大的搜索功能。AO3的標籤包山包海，從作品屬於哪個同人圈、潛在雷點（warnings，敏感內容預警）、作品分級、世界觀，到出場角色有哪些、角色之間的關係、以及任何創作者想添加的註解都可以是一個標籤。
 		</p>
 
 		<p>
-			建議在找作品時檢查一下雷點（warnings）：在「Exclude（排除）」底下的「warnings（雷點）」選擇不想看到的內容並按╳，這樣可以降低之後被作品內容雷到的機率。接著選填「fandoms（同人圈）」、「categories（分類）」和「additional tags（其他標籤）」這幾欄，有助於找到合心意的作品。其中「categories（分類）」裡面的M跟F分別代表男性（male）與女性（female），這一欄能幫你找到鍾意的主要愛情線類型。
+			找新作品時建議檢查一下雷點（warnings）：在「Exclude（排除）」底下的「warnings（雷點）」選擇不想看到的內容並按╳，這樣可以降低之後被作品內容雷到的機率。接著選填「fandoms（同人圈）」、「categories（分類）」和「additional tags（其他標籤）」這幾欄，有助於找到合心意的作品。其中「categories（分類）」裡面的M跟F分別代表男性（male）與女性（female），這一欄能幫你找到鍾意的主要愛情線或性關係類型。
 		</p>
 
 	<div class="side-by-side">
@@ -186,7 +184,7 @@
 			<figcaption>全文顯示鍵</figcaption>
 		</figure>
 		<p>
-			AO3 對文字內容支援度最高，任何小說都可以一鍵下載，可以選擇五六種格式，包含：PDF、 EPUB、AZW3,和HTML。  
+			AO3 對文字內容支援度最高，任何小說都可以一鍵下載，可以選擇的格式有五六種，包含：PDF、 EPUB、AZW3,和HTML等。 
 		</p>
 		<figure>
 			<img src="img/start_download_cn.jpg" alt="tip: download"/>
@@ -207,20 +205,19 @@
 <div class="article">
 	<article><!-- 之三 -->
 		<p>
-			AO3上的資源也可以用於增進英文能力，與學校課本相較之下，AO3的英文二創小說有較多俚語跟非正式語法，同時也有許多新單字可以學。雖然AO3有許多優良作品，但整體而言就其創作成品水準參差不齊，畢竟沒有編輯把關，作者常常要身兼編輯與校對，所以不少小說內含滿滿的拼字和文法錯誤。Beta有點類似校對或編輯，會協助作者修訂作品，所以一篇有Beta的小說通常拼字與文法錯誤會少很多。
+			AO3上的資源也可以用於增進英文能力。與學校課本相比，AO3的英文二創小說有較多俚語跟非正式語法，同時也有許多新單字可以學。雖然AO3有許多優良作品，但整體而言就其創作成品水準參差不齊，畢竟沒有編輯把關，作者常常要自己身兼編輯與校對，所以不少小說內含滿滿的拼字和文法錯誤。Beta有點類似校對或編輯，會協助作者修訂作品，所以一篇有Beta的小說通常拼字與文法錯誤會少很多。Beta也可以做為動詞，意思近似於「校對」，一篇beta過的小說同樣平均而言錯字少很多，讀起來比較舒服。
 		</p>
 		<figure>
 			<img src="img/sharpen_beta.jpg" alt="betaed work"/>
 			<figcaption>有Beta的作品</figcaption>
 		</figure>
 		<p>
-			除了小說之外，AO3上也有不少英文有聲書，使用的標籤通常是「Podfic」，代表是以同人文為創作基底的有聲書。因為這些有聲書都有逐字稿（原本的純文字小說）所以很適合拿練英文聽力。讓聽不懂有聲書的內容時，有逐字稿就方便查單字。另外，這些有聲書和同人文都可以免費下載／線上串流，對荷包很友善。除此之外，世界各地的人都可能在AO3分享自己的有聲書作品，所以用有聲書練英聽可以讓你習慣不同的語速跟口音。能被製成有聲書的二創小說通常人氣都不錯，平均而言他們行文時文法跟拼字錯誤也較少。
+			除了小說之外，AO3上也有不少英文有聲書，使用的標籤通常是「Podfic」，代表是以同人文為創作基底的有聲書。因為這些有聲書都有逐字稿（原本的純文字小說）所以很適合拿來練英文聽力。遇到聽不懂的內容時，有逐字稿就方便查單字。另外，這些有聲書和同人文都可以免費下載／線上串流收聽，對荷包很友善。又因為世界各地的人都可能在AO3分享自己錄製的有聲書，所以用有聲書練英聽可以讓你習慣不同的語速跟口音。能被製成有聲書的二創小說通常人氣都不錯，平均而言，他們寫作水平也比較高，作品讀起來較流暢，不會時不時出現奇怪的單字或拗口詭異的文法。
 		</p>
 		<figure>
 			<img src="img/sharpen_inspired_cn.jpg" alt="The work that inspired the podfic"/>
 			<figcaption style="padding-top: 3%;">如何找到有聲書的原文</figcaption>
 		</figure>
-
 
 	</article>
 </div>
@@ -236,18 +233,18 @@
 	<article><!-- 之四 -->
 		<p>
 			<h3>[Podfic] ain't really quaint</h3>
-			這是一個輕鬆爆笑的故事，屬於漫威《美國隊長》的同人創作，主角是美國隊長史蒂芬·羅傑斯（Steve Rogers）和酷寒戰士巴奇·巴恩斯（the winter soldier James “Bucky” Barnes）。說書人Quietnight眼光很好，被他挑中錄製成有聲書的故事都是優質作品，而且Quietnight在錄有聲書時會讓不同角色有不同聲線，角色在對話時很容易分辨誰是誰。
+			這是一個輕鬆爆笑的故事，屬於漫威《美國隊長》的同人創作，主角是美國隊長史蒂芬·羅傑斯（Steve Rogers）和酷寒戰士巴奇·巴恩斯（the winter soldier James “Bucky” Barnes）。說書人Quietnight眼光很好，被他挑中錄製成有聲書的故事都是優質作品，而且Quietnight在錄有聲書時會讓不同角色有不同聲線，當故事中角色互相對話時，聽眾可以輕鬆分辨誰是誰。　
 		</p>
 		<p>
-			Quietnight同時是優秀的畫家，《ain't really quaint》的有聲書版本就有好幾張超爆笑的出色插圖，推薦去看。
+			Quietnight除了很會講故事外，還是位優秀的畫家，《ain't really quaint》的有聲書版本就有好幾張超爆笑的出色插圖，很值得一看。
 		</p>
 		<p>
 			<h3>Opalsong</h3>
-			Opalsong 是位高產的說書人，目前累計有超過一千本有聲書，橫跨兩百多個同人圈。他同樣會給不同角色不同聲音，而且咬字清晰，又有優質的錄音與後製，每次聽他作品都是快的經驗。
+			Opalsong 是位高產的說書人，目前累計有超過一千本有聲書，橫跨兩百多個同人圈。他同樣會給不同角色不同聲音，而且咬字清晰，又有優質的錄音與後製，每次聽他作品都很愉快。
 		</p>
 		<p>
 			<h3>Lockedinjohnlock (Podfixx)</h3>
-			Lockedinjohnlock (Podfixx) 在AO3有兩個化名，分別為Lockedinjohnlock和Podfixx，名下各有超過一百本有聲書。他的有聲書品質也很好，而且他口音為台灣學生較少接觸的英國腔（他很多作品的標籤區都直接寫「English accent」！）。雖然我們不常聽到英國口音，不過Lockedinjohnlock (Podfixx)的口音不會太難聽懂，能體驗不同的聲調跟發音其實挺有趣的。
+			Lockedinjohnlock (Podfixx) 在AO3有兩個化名，分別為Lockedinjohnlock和Podfixx，名下各有超過一百本有聲書。他的有聲書品質也很好，而且他口音是台灣學生較少接觸的英國腔（他很多作品的標籤區都直接寫「English accent」XD）。雖然生活中較少接觸英國口音，不過Lockedinjohnlock 的口音不會太難聽懂，能體驗不同的聲調跟發音其實挺有趣的。
 		</p>
 		
 	</article>
