update complete essay analysis

--- a/essay_analysis/analysis.html
+++ b/essay_analysis/analysis.html
@@ -111,33 +111,26 @@ The previous paragraph talked about how scientists aim to prove cocoa’s effect
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - 
-
+The second sentence 
 <q>
-	
+	“People think the consumption of chocolate is…
 </q>
-
+ in this paragraph uses the phrase 
 <q>
-	
+	chocolate
 </q>
-
+ to refer to 
+ <q>
+ 	cocoa products
+ </q>
+  in the previous sentence 
+ <q>
+ 	Cocoa products have become…
+ </q>
+ . This technique is called 
 <b>
-	
-</b>
-					</li>
-					<li><b>Para #2</b> - 
-
-
-<q>
-	
-</q>
-
-<q>
-	
-</q>
-
-<b>
-	
-</b>
+	synonyms or similar wordings
+</b>.
 					</li>
 				</ul>
 
@@ -162,33 +155,51 @@ This paragraph introduces a new idea in the first sentence saying that the effec
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - 
-
+Because 
 <q>
-	
+	flavanols
 </q>
-
+ are the main reason cocoa has its 
 <q>
-	
+	anti-inflammatory might
 </q>
-
+, the phrase 
+<q>
+	anti-inflammatory might
+</q>
+ in the second sentence 
+<q>
+	While there has been evidence in cell cultures…
+</q>
+ is a paraphrase of 
+<q>
+	flavanols
+</q>
+ in the first sentence. The technique used is 
 <b>
-	
-</b>
+	paraphrasing
+</b>.
 					</li>
 					<li><b>Para #2</b> - 
 
-
+In the last sentence 
 <q>
-	
+	“We are going to prove or dispute it,”…
 </q>
-
+, the 
+<b>pronoun </b>
 <q>
-	
+	it
 </q>
-
-<b>
-	
-</b>
+ refers to 
+ <q>
+ 	biological plausibility
+ </q>
+  that both cocoa and multivitamins might 
+ <q>
+ 	have some health benefit
+ </q>
+ mentioned in the previous sentence.
 					</li>
 				</ul>
 
@@ -250,33 +261,32 @@ The opening sentence
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - 
-
+The second sentence 
 <q>
-	
+	Rather than just looking at…
 </q>
-
+in the first paragraph applies the technique 
+<b>repetition</b>
+ to connect this sentence and the previous sentence. The keyword repeated here is 
 <q>
-	
-</q>
-
-<b>
-	
-</b>
+	biological age
+</q>.
 					</li>
 					<li><b>Para #2</b> - 
 
-
+In the second paragraph of section 4, the second sentence 
 <q>
-	
+	He’ll also be doing sophisticated, extensive…
 </q>
-
+ uses the 
+ <b>linker</b>
 <q>
-	
+	also
 </q>
-
-<b>
-	
-</b>
+ to attach additional information to the previous sentence 
+<q>
+	inflammaging can be objectively assessed by…
+</q>.
 					</li>
 				</ul>
 
@@ -298,57 +308,48 @@ The opening sentence contains the keyword
 </q>
 . These are all keywords strongly related to the topic of the article, therefore creating a strong connection between this paragraph and other paragraphs.
 					</li>
-					<li><b>Para #2</b> - 
-
-
-<q>
-	
-</q>
-
-<q>
-	
-</q>
-
-
-					</li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - 
-
+The second sentence in this paragraph 
 <q>
-	
+	eating chocolate has been reported to…
 </q>
-
+ has the phrase 
 <q>
-	
+	chocolate
 </q>
-
+, which also appears in the previous sentence 
+<q>
+	particularly dark chocolate is….
+</q>
+ The technique used here is 
 <b>
-	
-</b>
+	repetition
+</b>.
 					</li>
-					<li><b>Para #2</b> - 
 
-
-<q>
-	
-</q>
-
-<q>
-	
-</q>
-
-<b>
-	
-</b>
-					</li>
 				</ul>
 			</section>
 			<section>
 				<h2>Take-home Message</h2>
-				<p>In the last paragraph of the entire essay, the author quotes the story of a participant taking part in the studies that investigate early indicators of dementia. In this story, the author's writing implies some positive aspects of understanding whether you have an early development of dementia. For example, the author shows that the odds of Alzheimer's disease is <q>lower than the participant had feared</q>. The author also quotes the participant's positive attitude toward the understanding of the risk despite the need to share their personal data, like <q>I would want to use them. I'd rather know than not</q>. Thus, we can see that in general, the author tries to convince people that <span style="background-color: #80cdc1;">there are more advantages than disadvantages to use your personal data to reveal your chance of having dementia and it's better to get fully prepared</span>.</p>
-				<p class="quote"><q>Paul Gondek, 68, who lives in Philadelphia and teaches social psychology at Drexel University, chose to learn his risk status two years ago, volunteering for several studies at the Penn Memory Center. Alzheimer’s tends to run in families and, having watched his mother’s slow decline from the disease, he knew he had a higher chance of developing it. To Mr. Gondek’s relief, the PET scan showed that he did not have elevated amounts of amyloid in his brain. And a calculated risk score showed that his odds of Alzheimer’s by age 85 were about 19 percent — higher than the 11 percent risk for the general population, but lower than he had feared. If other early indicators were available through driving or financial records or other behaviors and were reliable, he said, “I would want to use them. I’d rather know than not.”</q></p>
+				<p>
+In the last paragraph of this article, the author talked about how dark chocolate, food, and other beverages are 					
+<q>
+	considered good source of flavanols
+</q>
+. And are said to provide other beneficial nutrition as well. The author also used a survey to indicate that many adults take dietary supplement, and 
+<q>
+	Multivitamins are a favorite supplement.
+</q>
+ Combine the mention that cocoa and Multivitamins are both popular because they are viewed as “good for health” and the fact that this whole article is talking about how there is no strong evidence supporting the health benefit of cocoa and multivitamin, the author urges readers 
+					<span style="background-color: #80cdc1;">
+to be more cautious when eating something believing it benefits our health
+					</span>.</p>
+				<p class="quote"><q>
+					Particularly dark chocolate is regularly touted for its health benefits as a natural and good source of antioxidants as well as iron, copper and other things good for your heart and health. Eating chocolate has been reported to lower cholesterol, blood pressure, cognitive decline and boost the immune response to invaders like the coronavirus, Dong says. Food and beverage items like grapes and red wine, tomatoes, onions, berries and peaches also are considered good sources of flavanols. Surveys indicate the majority of American adults use a dietary supplement, with female use higher than male use and overall usage increasing with age, according to the Centers for Disease Control and Prevention. Multivitamins are a favorite supplement.
+				</q></p>
 			</section>
 		</article>
 	</body>
