--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -42,7 +42,7 @@
 
 	<nav>
 		<img src="img/menu.png" alt="menu">
-		<a href="index_en.html" ><img src="img/fire.png">Home</a>
+		<a href="index.html" ><img src="img/fire.png">Home</a>
 		<a href="featured_article_en.html" class="current-page"><img src="img/fire.png">AO3!! </a>
 		<a href="featured_article_cn.html" style="	font-family: TaipeiSansTCBeta, sans-serif;"><img src="img/fire.png">中文版</a>
 	</nav>
