--- a/personal/index_cn.html
+++ b/personal/index_cn.html
@@ -30,7 +30,7 @@
 		<img src="img/menu.png" alt="menu">
 		<a href="index_cn.html" class="current-page"><img src="img/fire.png">首頁</a>
 		<a href="featured_article_cn.html"><img src="img/fire.png">AO3!! </a>
-		<a href="index_en.html"><img src="img/fire.png">To EN</a>
+		<a href="index.html"><img src="img/fire.png">To EN</a>
 	</nav>
 	<div class="article">
 	<article>
