--- a/personal/bootstrap.html
+++ b/personal/bootstrap.html
@@ -8,11 +8,106 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
-
+    <!-- <style>
+        [class*="col"]{
+            padding: 1rem;
+            background-color: #33b5e5;
+            border: 2px solid #ddd9d9;
+            color: #ffffff;
+        }
+    </style> -->
 </head>
 <body>
-    <h1>Hello CDN World</h1>
+    <div class="container my-5">
+        <div class="row my-5">
+            <div class="col-3">
+                <div class="card">
+                    <img 
+                        src="https://picsum.photos/300/300" 
+                        alt="" 
+                        class="card-img-top">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+            </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-header">Card header</div>
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="card-footer ">
+                        2 days ago
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img 
+                            src="https://picsum.photos/200/300" 
+                            class="img-fluid rounded-start" 
+                            alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-4">
+                <div class="card" ">
+                    <img 
+                        src="https://picsum.photos/300/300" 
+                        class="card-img-top" 
+                        alt="..."
+                    >
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
 
+        </div>
+        <div class="row">
+            <div class="card w-50" ">
+                <img 
+                    src="https://picsum.photos/300/300" 
+                    class="card-img-top" 
+                    alt="..."
+                >
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;"">
+                <img 
+                    src="https://picsum.photos/300/300" 
+                    class="card-img-top" 
+                    alt="..."
+                >
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
