trying and testing nav bars

--- a/personal/index_cn.html
+++ b/personal/index_cn.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
 	<meta charset="utf-8">
-	<title>autobiogrophy</title>
+	<title>autobiography</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="home.css">	
 	<style>
